--- a/AutymnR.html
+++ b/AutymnR.html
@@ -48,7 +48,7 @@
         <!-- About-->
         <section class="about-section text-center" id="about">
             <div class="container px-4 px-lg-5">
-                <img class="stamp" src="assets/img/me-on-ground.jpg" alt="..." />    
+                <img class="stamp" src="assets/me-on-ground.jpg" alt="..." />    
                 <div class="crazy row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 align-items-right">
                         <h1 class="text-white mb-4">About Me</h1>
@@ -69,7 +69,7 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="stamp mb-3 mb-lg-0" src="assets/img/baby-me.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="stamp mb-3 mb-lg-0" src="assets/baby-me.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text">
                             <h4 class="text-center bold">Mini Me </h4>
@@ -85,7 +85,7 @@
                 </div>
                    <!-- Featured Project Row-->
                    <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="stamp mb-3 mb-lg-0" src="assets/img/herring-bottle.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="stamp mb-3 mb-lg-0" src="assets/herring-bottle.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text ">
                             <h4 class="bold text-center">Herring Still Life</h4>
@@ -102,7 +102,7 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center border-pic">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/mountain-lupine-ladybug.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/mountain-lupine-ladybug.jpg" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -122,7 +122,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center border-pic">
-                    <div class="col-lg-6 border-left"><img class="img-fluid" src="assets/img/drive-boat.jpg" alt="..." /><img class="img-fluid" src="assets/img/drive-UTV.jpg" alt="..." /><img class="img-fluid" src="assets/img/drive-desert.jpg" alt="..." /></div>
+                    <div class="col-lg-6 border-left"><img class="img-fluid" src="assets/drive-boat.jpg" alt="..." /><img class="img-fluid" src="assets/drive-UTV.jpg" alt="..." /><img class="img-fluid" src="assets/drive-desert.jpg" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black h-100 project">
                             <div class="d-flex h-100">
@@ -177,10 +177,10 @@
                 </div>
                   <!-- Project 3rd Row-->
                   <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">                    
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/yellow-pumpkin.jpg" alt="..." /></div>
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/blue-horseshoe.jpg" alt="..." /></div>
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/self-portrait.jpg" alt="..." /></div>
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/tree-painting.png" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/yellow-pumpkin.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/blue-horseshoe.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/self-portrait.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/tree-painting.png" alt="..." /></div>
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
